--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-[{"id": 1, "title": "run", "completed": false}]
+[{"id": 1, "title": "Running is Good for Health", "completed": true}, {"id": 2, "title": "Practice makes Perfect", "completed": true}]
